grammar.js
        source_file: ($) =>
            seq(
                optional($.container_doc_comment),
                optional($._container_members),
            ),

        _container_members: ($) =>
            seq(
                choice(
                    seq(
                        repeat1($._container_member),
                        optional($.container_field),
                    ),
                    $.container_field,
                ),
            ),

        container_field: ($) =>
            prec(
                PREC.assignment,
                seq(
                    optional($.doc_comment),
                    optional("comptime"),
                    optional($._name),
                    field("type", $.type),
                    optional($.byte_align),
                    optional(seq("=", field("value", $.expression))),
                ),
            ),

        _name: ($) => prec(1, seq(field("name", $._identifier), ":")),

        test_declaration: ($) =>
            seq(
                "test",
                optional(
                    field(
                        "doctest_name",
                        choice($.string_literal, $.identifier),
                    ),
                ),
                field("body", $.block),
            ),

        // Declarations

        global_variable_declaration: ($) =>
            seq(
                optional($.doc_comment),
                optional("pub"),
                optional("export"),
                optional("threadlocal"),
                $._variable_declaration_proto,
                "=",
                field("value", $.expression),
                ";",
            ),

        extern_variable_declaration: ($) =>
            seq(
                optional($.doc_comment),
                optional("pub"),
                "extern",
                optional("threadlocal"),
                optional(field("layout", $.string_literal)),
                $._variable_declaration_proto,
                ";",
            ),

        extern_function_declaration: ($) =>
            seq(
                optional($.doc_comment),
                optional("pub"),
                "extern",
                optional(field("layout", $.string_literal)),
                $._function_proto,
                ";",
            ),

        function_declaration: ($) =>
            seq(
                optional($.doc_comment),
                optional("pub"),
                optional(choice("inline", "noinline", "export")),
                $._function_proto,
                $.block,
            ),

        // Expressions

        return_expression: ($) =>
            prec.right(seq("return", optional($.expression))),

        try_expression: ($) => seq("try", $.expression),

        binary_expression: ($) => {
            const table = [
                [PREC.multiplicative, choice(...multiplicative_operators)],
                [PREC.additive, choice(...additive_operators)],
                [PREC.shift, choice(...shift_operators)],
                [PREC.bitwise, choice(...bitwise_operators, "orelse")],
                [PREC.comparison, choice(...comparison_operators)],
                [PREC.and, "and"],
                [PREC.or, "or"],
            ];
            return choice(
                ...table.map(([precedence, operator]) =>
                    prec.left(
                        precedence,
                        seq(
                            field("left", $.expression),
                            field("operator", operator),
                            field("right", $.expression),
                        ),
                    ),
                ),
            );
        },

        inferred_superset: ($) => seq(".", $._identifier),

        grouped_expression: ($) => seq("(", $.expression, ")"),

        builtin_function: ($) =>
            seq($.builtin_identifier, $._call_function_suffix),

        access_expression: ($) =>
            prec(PREC.call, seq($.type, ".", field("field", $._identifier))),
        call_expression: ($) =>
            prec(PREC.call, seq($.type, $._call_function_suffix)),
        error_subset: ($) => seq("error", ".", $._identifier),
        block: ($) =>
            seq(
                "{",
                repeat(
                    choice(
                        $.variable_assignment_statement,
                        $.defer_statement,
                        $.errdefer_statement,
                        $.statement,
                    ),
                ),
                "}",
            ),

        variable_assignment_statement: ($) =>
            prec(
                PREC.assignment,
                seq(
                    optional("comptime"),
                    sepByComma(
                        choice($.expression, $._variable_declaration_proto),
                    ),
                    "=",
                    field("value", $.expression),
                    ";",
                ),
            ),

        _block_expression_statement: ($) =>
            prec(
                1,
                choice(
                    seq(optional($.block_label), $.block),
                    seq($._assign_expression, ";"),
                ),
            ),

        defer_statement: ($) => seq("defer", $._block_expression_statement),
        errdefer_statement: ($) =>
            seq("errdefer", optional($.payload), $._block_expression_statement),

        block_expression: ($) => prec(1, seq(optional($.block_label), $.block)),

        if_statement: ($) =>
            seq(
                $._if_prefix,
                choice(
                    seq(
                        field("consequence", $.block_expression),
                        optional(
                            field(
                                "alternative",
                                seq("else", optional($.payload), $.statement),
                            ),
                        ),
                    ),
                    seq(
                        field("consequence", $._assign_expression),
                        choice(
                            ";",
                            field(
                                "alternative",
                                seq("else", optional($.payload), $.statement),
                            ),
                        ),
                    ),
                ),
            ),

        expression_statement: ($) => seq($.expression, ";"),

        _assign_expression: ($) =>
            prec(1, choice($._assign_expr, $.expression)),
        primitive_type: ($) =>
            token(
                prec(
                    1,
                    choice(
                        "isize",
                        "usize",
                        "c_char",
                        "c_short",
                        "c_ushort",
                        "c_int",
                        "c_uint",
                        "c_long",
                        "c_ulong",
                        "c_longlong",
                        "c_ulonglong",
                        "c_longdouble",
                        "f16",
                        "f32",
                        "f64",
                        "f80",
                        "f128",
                        "bool",
                        "anyopaque",
                        "void",
                        "noreturn",
                        "type",
                        "anyerror",
                        "comptime_int",
                        "comptime_float",
                        /[iu][0-9]+/,
                    ),
                ),
            ),

        multiline_string_literal: ($) => repeat1(seq("\\\\", /.*/)),

        integer_literal: ($) =>
            token(
                seq(
                    /[0-9]/,
                    repeat(choice(/[_0-9A-DF-OQ-Za-df-oq-z]/, /[eEpP][+-]?/)),
                ),
            ),

        float_literal: ($) =>
            token(
                seq(
                    /[0-9]/,
                    repeat(choice(/[_0-9A-DF-OQ-Za-df-oq-z]/, /[eEpP][+-]?/)),
                    ".",
                    repeat1(choice(/[_0-9A-DF-OQ-Za-df-oq-z]/, /[eEpP][+-]?/)),
                ),
            ),

        char_literal: ($) => seq("'", choice($.escape_sequence, /[^'\\]/), "'"),

        string_literal: ($) =>
            seq(
                '"',
                repeat(
                    choice(
                        alias(
                            token.immediate(prec(1, /[^"\n\\]+/)),
                            $.string_literal_content,
                        ),
                        $.escape_sequence,
                    ),
                ),
                token.immediate('"'),
            ),

        identifier: ($) =>
            token(choice(/@"([^"\\]|\\.)*"/, /[A-Za-z_][A-Za-z0-9_]*/)),
        _identifier: ($) =>
            choice($.identifier, alias($.primitive_type, $.identifier)),
        builtin_identifier: ($) => /@[A-Za-z_][A-Za-z0-9_]*/,

        escape_sequence: ($) =>
            token.immediate(
                seq(
                    "\\",
                    choice(/[nrt\\'"]/, /x[0-9a-fA-F]{2}/, /u\{[0-9a-fA-F]+\}/),
                ),
            ),

        doc_comment: ($) => repeat1(token(seq("///", /.*/))),
        container_doc_comment: ($) => repeat1(token(seq("//!", /.*/))),
        _if_prefix: ($) =>
            seq(
                "if",
                "(",
                field("condition", $.expression),
                ")",
                optional($.ptr_payload),
            ),

        _call_function_suffix: ($) =>
            seq("(", optional(sepByCommaTrailing($.expression)), ")"),

        _variable_declaration_proto: ($) =>
            seq(
                choice("const", "var"),
                field("name", $.identifier),
                optional(seq(":", field("type", $.type))),
                optional($.byte_align),
                optional($.addr_space),
                optional($.link_section),
            ),

        _function_proto: ($) =>
            seq(
                "fn",
                optional(field("name", $.identifier)),
                field("parameters", $.parameters),
                $._function_return,
            ),

        parameter: ($) =>
            seq(
                optional($.doc_comment),
                optional(choice("noalias", "comptime")),
                optional($._name),
                field("type", choice("anytype", $.type)),
            ),
        parameters: ($) =>
            seq(
                "(",
                optional(
                    seq(
                        choice(
                            "...",
                            seq(
                                sepByComma($.parameter),
                                optional(seq(",", "...")),
                            ),
                        ),
                        optional(","),
                    ),
                ),
                ")",
            ),

        byte_align: ($) => seq("align", "(", $.expression, ")"),
        callconv: ($) => seq("callconv", "(", $.expression, ")"),
