test/corpus/source_files.txt
=====================
Variable Declaration
=====================

pub var b = true;
pub extern "c" var cd: bool align(4);
threadlocal var x: i32 = 1234;
export var e: f64 = 1;

---

(source_file
  (global_variable_declaration
    name: (identifier)
    value: (identifier))
  (extern_variable_declaration
    layout: (string_literal
      (string_literal_content))
    name: (identifier)
    type: (primitive_type)
    (byte_align
      (integer_literal)))
  (global_variable_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal))
  (global_variable_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

==================
Container members
==================

//! container doc comment
//! another

a: bool align(4) = true,
/// doc comment
b: i8

---

(source_file
  (container_doc_comment)
  (container_field
    name: (identifier)
    type: (primitive_type)
    (byte_align
      (integer_literal))
    value: (identifier))
  (container_field
    (doc_comment)
    name: (identifier)
    type: (primitive_type)))

=========
Literals
=========

test "integer" {
    const decimal_int = 98222;
    const hex_int = 0xff;
    const another_hex_int = 0xFF;
    const octal_int = 0o755;
    const binary_int = 0b11110000;

    const one_billion = 1_000_000_000;
    const binary_mask = 0b1_1111_1111;
    const permissions = 0o7_5_5;
    const big_address = 0xFF80_0000_0000_0000;
}

test "float" {
    const floating_point = 123.0E+77;
    const another_float = 123.0;
    const yet_another = 123.0e+77;

    const hex_floating_point = 0x103.70p-5;
    const another_hex_float = 0x103.70;
    const yet_another_hex_float = 0x103.70P-5;

    const lightspeed = 299_792_458.000_000;
    const nanosecond = 0.000_000_001;
    const more_hex = 0x1234_5678.9ABC_CDEFp-10;
}

test "string" {
    const a = "\n";
    const b = "\r";
    const c = "\t";
    const d = "\\";
    const e = "\'";
    const f = "\"";
    const g = "\x6D";
    const h = "\u{65}";
    const i = "hello\nworld";
    const j = "hello\r\nworld";
    const k = "hello\tworld";
    const l = "hello\\world";
    const m = "hello\"world";
    const n = "hello\x6Dworld";
    const o = "hello\u{65}world";
    const p =
        \\#include <stdio.h>
        \\
        \\int main(int argc, char **argv) {
        \\    printf("hello world\n");
        \\    return 0;
        \\}
    ;
}

test "char" {
    const g = 'a';
    const u = '\n';
    const i = '\r';
    const l = '\t';
    const h = '\\';
    const e = '\'';
    const r = '\"';
    const m = '\x6D';
    const e = '\u{65}';
}

test {
    const a = true;
    const b = false;
    const c = null;
    const d = undefined;
}

---

(source_file
  (test_declaration
    doctest_name: (string_literal
      (string_literal_content))
    body: (block
      (variable_assignment_statement
        name: (identifier)
        value: (integer_literal))
      (variable_assignment_statement
        name: (identifier)
        value: (integer_literal))
      (variable_assignment_statement
        name: (identifier)
        value: (integer_literal))
      (variable_assignment_statement
        name: (identifier)
        value: (integer_literal))
      (variable_assignment_statement
        name: (identifier)
        value: (integer_literal))
      (variable_assignment_statement
        name: (identifier)
        value: (integer_literal))
      (variable_assignment_statement
        name: (identifier)
        value: (integer_literal))
      (variable_assignment_statement
        name: (identifier)
        value: (integer_literal))
      (variable_assignment_statement
        name: (identifier)
        value: (integer_literal))))
  (test_declaration
    doctest_name: (string_literal
      (string_literal_content))
    body: (block
      (variable_assignment_statement
        name: (identifier)
        value: (float_literal))
      (variable_assignment_statement
        name: (identifier)
        value: (float_literal))
      (variable_assignment_statement
        name: (identifier)
        value: (float_literal))
      (variable_assignment_statement
        name: (identifier)
        value: (float_literal))
      (variable_assignment_statement
        name: (identifier)
        value: (float_literal))
      (variable_assignment_statement
        name: (identifier)
        value: (float_literal))
      (variable_assignment_statement
        name: (identifier)
        value: (float_literal))
      (variable_assignment_statement
        name: (identifier)
        value: (float_literal))
      (variable_assignment_statement
        name: (identifier)
        value: (float_literal))))
  (test_declaration
    doctest_name: (string_literal
      (string_literal_content))
    body: (block
      (variable_assignment_statement
        name: (identifier)
        value: (string_literal
          (escape_sequence)))
      (variable_assignment_statement
        name: (identifier)
        value: (string_literal
          (escape_sequence)))
      (variable_assignment_statement
        name: (identifier)
        value: (string_literal
          (escape_sequence)))
      (variable_assignment_statement
        name: (identifier)
        value: (string_literal
          (escape_sequence)))
      (variable_assignment_statement
        name: (identifier)
        value: (string_literal
          (escape_sequence)))
      (variable_assignment_statement
        name: (identifier)
        value: (string_literal
          (escape_sequence)))
      (variable_assignment_statement
        name: (identifier)
        value: (string_literal
          (escape_sequence)))
      (variable_assignment_statement
        name: (identifier)
        value: (string_literal
          (escape_sequence)))
      (variable_assignment_statement
        name: (identifier)
        value: (string_literal
          (string_literal_content)
          (escape_sequence)
          (string_literal_content)))
      (variable_assignment_statement
        name: (identifier)
        value: (string_literal
          (string_literal_content)
          (escape_sequence)
          (escape_sequence)
          (string_literal_content)))
      (variable_assignment_statement
        name: (identifier)
        value: (string_literal
          (string_literal_content)
          (escape_sequence)
          (string_literal_content)))
      (variable_assignment_statement
        name: (identifier)
        value: (string_literal
          (string_literal_content)
          (escape_sequence)
          (string_literal_content)))
      (variable_assignment_statement
        name: (identifier)
        value: (string_literal
          (string_literal_content)
          (escape_sequence)
          (string_literal_content)))
      (variable_assignment_statement
        name: (identifier)
        value: (string_literal
          (string_literal_content)
          (escape_sequence)
          (string_literal_content)))
      (variable_assignment_statement
        name: (identifier)
        value: (string_literal
          (string_literal_content)
          (escape_sequence)
          (string_literal_content)))
      (variable_assignment_statement
        name: (identifier)
        value: (multiline_string_literal))))
  (test_declaration
    doctest_name: (string_literal
      (string_literal_content))
    body: (block
      (variable_assignment_statement
        name: (identifier)
        value: (char_literal))
      (variable_assignment_statement
        name: (identifier)
        value: (char_literal
          (escape_sequence)))
      (variable_assignment_statement
        name: (identifier)
        value: (char_literal
          (escape_sequence)))
      (variable_assignment_statement
        name: (identifier)
        value: (char_literal
          (escape_sequence)))
      (variable_assignment_statement
        name: (identifier)
        value: (char_literal
          (escape_sequence)))
      (variable_assignment_statement
        name: (identifier)
        value: (char_literal
          (escape_sequence)))
      (variable_assignment_statement
        name: (identifier)
        value: (char_literal
          (escape_sequence)))
      (variable_assignment_statement
        name: (identifier)
        value: (char_literal
          (escape_sequence)))
      (variable_assignment_statement
        name: (identifier)
        value: (char_literal
          (escape_sequence)))))
  (test_declaration
    body: (block
      (variable_assignment_statement
        name: (identifier)
        value: (identifier))
      (variable_assignment_statement
        name: (identifier)
        value: (identifier))
      (variable_assignment_statement
        name: (identifier)
        value: (identifier))
      (variable_assignment_statement
        name: (identifier)
        value: (identifier)))))

=====================
Function Declaration
=====================

extern "kernel32" fn ExitProcess(exit_code: u32) callconv(.winapi) noreturn;
extern "c" fn atan2(a: f64, b: f64) f64;

export fn sub(a: i8, b: i8) i8 {
    return a - b;
}

---

(source_file
  (extern_function_declaration
    layout: (string_literal
      (string_literal_content))
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (primitive_type)))
    (callconv
      (inferred_superset
        (identifier)))
    return_type: (primitive_type))
  (extern_function_declaration
    layout: (string_literal
      (string_literal_content))
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (primitive_type))
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type))
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (primitive_type))
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    (block
      (expression_statement
        (return_expression
          (binary_expression
            left: (identifier)
            right: (identifier)))))))
